# progress-management

./: .gitignore  README.md  package-lock.json  package.json  progress.xlsx
backend/: package-lock.json  package.json
backend/src/: config.js  excelStore.js  server.js
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  reportPowerPoint.js  styles.css
scripts/: generate-progress-xlsx.mjs  generate-sample-10.mjs  seed-sample.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: excel_store.rs  lib.rs  main.rs  models.rs  settings.rs
