[package]
name = "progress-tracker-poc"
version = "0.5.0"
description = "Serverless desktop progress tracker using Tauri"
authors = ["GitHub Copilot"]
edition = "2021"
default-run = "progress-tracker-poc"

[lib]
name = "progress_tracker_poc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
calamine = "0.30.0"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
rust_xlsxwriter = "0.90.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.0.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
